Missing null-check in HTMLFormElement::rendererIsNeeded() https://bugs.webkit.org/show_bug.cgi?id=120159

Reviewed by Ryosuke Niwa.

Source/WebCore:

Null-check parentRenderer in HTMLFormElement::rendererIsNeeded()
and early return.

Test: fast/forms/missing-parentrenderer-crash.html

* html/HTMLFormElement.cpp:
(WebCore::HTMLFormElement::rendererIsNeeded):

LayoutTests:

Test for the handling of null parentRederer.

* fast/forms/missing-parentrenderer-crash-expected.txt: Added.
* fast/forms/missing-parentrenderer-crash.html: Added.

Canonical link: https://commits.webkit.org/138135@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154476 268f45cc-cd09-0410-ab3c-d52691b4dbfc